--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I have to learn to be more comfortable talking about myself. I am worthy of conversation. I'm smart, funny and beautiful!
 
 # social links
-twitter_username: no twitter
+twitter_username: your-twitter-handle
 github_username:  milabknowin
 
 show_excerpts: true # set to false to remove excerpts on the homepage
